--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ export_presets.cfg
 data_*/
 mono_crash.*.json
 
+#Android build ignore
+android/build/*
+!android/build/AndroidManifest.xml
+
 # macos
 .DS_Store
 
