--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ mono_crash.*.json
 # Android build ignore
 android/build/*
 !android/build/AndroidManifest.xml
+!android/build/.gdignore
 
 # Godot OpenXr Plugin (might be breakin stuff now)
 /addons/godotopenxr
